test/tests/operators/accept_http/accept_http_error_tls_missing_certfile.txt
error: `tls.keyfile` path is not a valid file: tests/operators/from_tcp/test.yaml
 --> tests/operators/accept_http/accept_http_error_tls_missing_certfile.tql:6:17
  |
6 |             tls={keyfile: "tests/operators/from_tcp/test.yaml"} {
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
